@@ -1,5 +1,6 @@
 Version 2.02.180 - 
 =================================
+  Cache can uses metadata format 2 with cleaner policy.
   Avoid showing internal error in lvs output or pvmoved LVs.
   Fix check if resized PV can also fit metadata area.
   Reopen devices RDWR before writing to avoid udev issues.
